

<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login">
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />
    <ImageView android:contentDescription="@string/textcria"
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:background="@drawable/custom_input"
        android:hint="@string/email"
        android:textColorHint="@color/green"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        />
    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_text"
        android:background="@drawable/custom_input"
        android:hint="@string/senha"
        android:textColorHint="@color/green"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:drawableEnd="@drawable/ic_eye"
        android:drawableTint="@color/green"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_entrar"
        style="@style/Button2"
        android:hint="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="60dp"
        android:indeterminateTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"
        />

    <TextView
        android:id="@+id/text_cria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textcria"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_entrar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>